--- a/packaged-template.yaml
+++ b/packaged-template.yaml
@@ -6,8 +6,10 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: translate-function-2
-      CodeUri: s3://hands-on-serverless-2-yt/cfcc69059ee80af35cc2d6493d0e51a4
+      CodeUri: s3://hands-on-serverless-2-yt/12721c7f873a293f9eb42478ec6bda35
       Handler: translate-function.lambda_handler
       Runtime: python3.7
       Timeout: 5
       MemorySize: 256
+      Policies:
+      - TranslateFullAccess
