--- a/packaged-template.yaml
+++ b/packaged-template.yaml
@@ -6,10 +6,24 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: translate-function-2
-      CodeUri: s3://hands-on-serverless-2-yt/12721c7f873a293f9eb42478ec6bda35
+      CodeUri: s3://hands-on-serverless-2-yt/27eba3b7b1690fe747d81c60a9b41447
       Handler: translate-function.lambda_handler
       Runtime: python3.7
       Timeout: 5
       MemorySize: 256
       Policies:
       - TranslateFullAccess
+      Events:
+        GetApi:
+          Type: Api
+          Properties:
+            Path: /translate
+            Method: get
+            RestApiId:
+              Ref: TranslateAPI
+  TranslateAPI:
+    Type: AWS::Serverless::Api
+    Properties:
+      Name: translate-api-2
+      StageName: dev
+      EndpointConfiguration: REGIONAL
