--- a/packaged-template.yaml
+++ b/packaged-template.yaml
@@ -6,13 +6,14 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: translate-function-2
-      CodeUri: s3://hands-on-serverless-2-yt/27eba3b7b1690fe747d81c60a9b41447
+      CodeUri: s3://hands-on-serverless-2-yt/a4f3fe062e29c3151ac8b40499e6e28d
       Handler: translate-function.lambda_handler
       Runtime: python3.7
       Timeout: 5
       MemorySize: 256
       Policies:
       - TranslateFullAccess
+      - AmazonDynamoDBFullAccess
       Events:
         GetApi:
           Type: Api
@@ -27,3 +28,13 @@ Resources:
       Name: translate-api-2
       StageName: dev
       EndpointConfiguration: REGIONAL
+  TranslateDynamoDbTbl:
+    Type: AWS::Serverless::SimpleTable
+    Properties:
+      TableName: translate-history-2
+      PrimaryKey:
+        Name: timestamp
+        Type: String
+      ProvisionedThroughput:
+        ReadCapacityUnits: 1
+        WriteCapacityUnits: 1
